<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/selected_team_popup_divider"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            android:id="@+id/selected_team_popup_opponent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@null"
            android:hint="@string/new_opponent_name"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/selected_team_popup_create_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Create"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/quid_stats_red"/>

    <TextView
        android:id="@+id/selected_team_popup_edit_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/selected_team_popup_divider"
        android:gravity="center"
        android:text="@string/edit_team"
        android:textSize="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/quid_stats_red" />


    <TextView
        android:id="@+id/selected_team_popup_resume_game"
        android:layout_width="match_parent"
        android:layout_height="@dimen/selected_team_popup_divider"
        android:gravity="center"
        android:text="@string/view_old_games"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/quid_stats_red" />

    <TextView
        android:id="@+id/selected_team_popup_stats"
        android:layout_width="match_parent"
        android:layout_height="@dimen/selected_team_popup_divider"
        android:gravity="center"
        android:text="@string/view_team_stats"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/quid_stats_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/selected_team_popup_divider">

        <TextView
            android:id="@+id/selected_team_videos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/watch_videos"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/selected_team_download_stats"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/download_stats"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/selected_team_vid_stats"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video_stats"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>
